--- a/MyStyle/login.css
+++ b/MyStyle/login.css
@@ -6,22 +6,25 @@
   box-sizing: border-box;
 }
 
+.container-main{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100dvh
+}
+
 body {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: hsl(0, 0%, 95%);
-  height: 100dvh;
+  background-color: hsl(0, 0%, 100%);
 }
 
 .container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 28.5%;
   background-color: #fff;
-  max-width: fit-content;
-  margin: auto;
-  border-radius: 1rem;
-  padding: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .container-ingresar {
@@ -31,6 +34,9 @@ body {
   background-clip: text;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
+}
+.aling{
+  width: 20rem;
 }
 
 .email-container {
@@ -58,8 +64,7 @@ label {
 }
 
 .email-container,
-.password-container,
-.container-into {
+.password-container{
   margin-bottom: 1rem;
 }
 
@@ -83,8 +88,16 @@ label {
   outline: 0;
 }
 
+.boton-aling{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
+
 .ingresar-btn {
   padding: 0.5rem 1rem;
+  margin-right: 1rem;
   border-radius: 0.5rem;
   background-color: #bf7083;
   color: #fff;
@@ -97,9 +110,28 @@ label {
 }
 
 .register-link {
-  background: linear-gradient(180deg, #9f4147 0%, #bf7083 100%);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+  text-decoration: none;
+  padding: 0.34rem 0.9rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid #bf7083;
   font-weight: 600;
+  color: #bf7083;
+  transition: border 200ms ease;
+  cursor: pointer;
+}
+
+.register-link:hover {
+  border: 0.2rem solid #9f4147;
+  color: #9f4147;
+}
+
+.imagen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.imagen img{
+  width: 100%;
 }
